# cloudflare-ddns

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.sample.yml  env.example  pyproject.toml  requirements.txt
ddns/: __init__.py  __main__.py  cloudflare.py  config.py  ip.py  updater.py
tests/: test_config.py  test_multi_config.py  test_updater.py
